# mldlc-governance-framework

./: .cursorrules  .env.airgapped.example  .gitignore  .pre-commit-config.yaml  LICENSE  PRODUCTION_ROADMAP.md  README.md  Sandi_Bot_Coaching_Intelligence_README.md  pyproject.toml  requirements-sandy.txt  requirements.txt  run_mcp.py  setup.py  start.ps1  temp_2c46648.txt
.cursor/rules/: sandi-bot-desktop.mdc
.github/workflows/: build.yml  ci-cd.yml  ci.yml  deploy-streamlit.yml
.streamlit/: config.toml
Sandi_Bot_Desktop/: .gitignore  CLAUDE.md  INTEGRITY_REPORT.md  PRODUCTION_ROADMAP.md  README.md  TOOLS.md  index.html  organize_all_client_files.ps1  organize_client_files.ps1  package-lock.json  package.json  query_extractions.py  run_queries.py  setup_client_folders.ps1
Sandi_Bot_Desktop/configs/: base_client.config.json  fred_webster.json  sandi_stahl.json
Sandi_Bot_Desktop/docs/: ARCHITECTURE_DECISIONS.md  Client_Onboarding_Steps.md  INSTALLER_RULES.md  SESSION_LOG.md  STZ_ADR_LOG.md  STZ_AGENT_SPECIFICATION.md  STZ_DOMAIN_MODEL.md  STZ_Framework_Overview.md  STZ_POSTMORTEM_LIBRARY.md  STZ_RUNBOOK_LIBRARY.md  STZ_VOICE_LIBRARY.md
Sandi_Bot_Desktop/prompts/: clear_rubric.txt  coaching_assistant.txt  completeness_check.txt  disc_extraction.txt  fathom_extraction.txt  few_shot_guide.md  pink_flag_detection.txt  post_call_evaluation.txt  recommendation.txt  tumay.txt  vision_extraction.txt  vision_generation.txt  you2_extraction.txt
Sandi_Bot_Desktop/src/: App.tsx  index.css
Sandi_Bot_Desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Sandi_Bot_Desktop/src-tauri/capabilities/: default.json
Sandi_Bot_Desktop/src-tauri/nsis/: main.nsh
Sandi_Bot_Desktop/src-tauri/src/: backup.rs  database.rs  disc_parser.rs  file_watcher.rs  lib.rs  main.rs  migrations.rs  pdf_parser.rs  text_extractor.rs  tumay_parser.rs  you2_parser.rs
Sandi_Dashboard/: README.md  app.py  packages.txt  requirements.txt
Sandi_Dashboard/.streamlit/: config.toml
Sandi_Dashboard/components/: __init__.py  client_card.py  compartment_badge.py  disc_badge.py  kpi_card.py  pipeline_funnel.py  sidebar.py
Sandi_Dashboard/data/: disc_profiles.json  sample_clients.json
Sandi_Dashboard/pages/: 01_Dashboard.py  02_My_Clients.py  03_Pipeline.py  04_Coaching_Helper.py  99_Developer_Logs.py
Sandi_Dashboard/utils/: __init__.py  database.py  logger.py  styles.py
Sandi_Dashboard_Complete/: README.md  app.py  requirements.txt
Sandi_Dashboard_Complete/.streamlit/: config.toml
Sandi_Dashboard_Complete/components/: __init__.py  sidebar.py
Sandi_Dashboard_Complete/data/: __init__.py  clients.json
Sandi_Dashboard_Complete/pages/: 01_Dashboard.py  02_Clients.py  03_Pipeline.py  04_Live_Call.py  (+3 more)
agents/: __init__.py  governance_agent.py  router.py  state.py
app/: README.md  __init__.py  app.py  main.py  requirements.txt  streamlit_app.py
core/: __init__.py  artifacts.py  exceptions.py  explainability.py  gates.py  lineage.py  run_id.py
court-of-rules/: README.md  RULE_INDEX.json
data/: clients.json
docs/: ARCHITECTURE.md  COURT_OF_RULES_V2.md  FEW_SHOT_PROMPTING.md  INTERVENTION_INTELLIGENCE.md  JOBS_TO_BE_DONE.md  LORA_QLORA_GUIDE.md  MOE_LLM_ROUTER.md  TROUBLESHOOTING.md  VTCO_QUICK_REFERENCE.md
examples/: iris_zone_demo.py
governance/: risk_matrix.json
mcp/: __init__.py  governance_server.py  mcp_server.py
metrics/: ml_metrics_config.yaml
pipeline/: __init__.py
process/: vtco_process_map.json
schemas/: model_card_v1.schema.json  problem_charter_v1.schema.json
scripts/: check_headers.py  check_thresholds.py
src/: database.py  models.py
taxonomy/: knowledge_taxonomy.json
tests/: __init__.py  test_governance.py  test_schemas.py
(+207 files in other folders)
