[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mldlc-governance-framework"
version = "1.0.0"
description = "Machine Learning Development Lifecycle Governance Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ML Governance Team", email = "ml-governance@company.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "plotly>=5.15.0",
    "networkx>=3.1",
    "jsonschema>=4.19.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.0.0", "flake8>=6.0.0"]

[project.urls]
Homepage = "https://github.com/Zmugha1/mldlc-governance-framework"
Documentation = "https://github.com/Zmugha1/mldlc-governance-framework"
Repository = "https://github.com/Zmugha1/mldlc-governance-framework"
