[package]
name = "sandi-bot-desktop"
version = "0.1.0"
description = "Sandi Bot Coaching Intelligence Desktop"
authors = ["Sandi Bot Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.32"
notify = "6"
pdf-extract = "0.7"
lopdf = "0.35"
chrono = "0.4"
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "sandi_bot_desktop"
crate-type = ["lib", "cdylib", "staticlib"]
