[package]
name = "sandi-bot-desktop"
version = "0.1.0"
description = "Sandi Bot Coaching Intelligence Desktop"
authors = ["Sandi Bot Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
pdf-extract = "0.7"
lopdf = "0.32"
calamine = "0.24"
csv = "1.3"
zip = "0.6"
chrono = "0.4"
regex = "1"
image = { version = "0.25", default-features = false }
pdfium-render = { version = "0.8", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "sandi_bot_desktop"
crate-type = ["lib", "cdylib", "staticlib"]
